<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    tools:context="com.cwm71.memo808224.ReminderActivity" android:layout_height="match_parent"
    android:fadeScrollbars="false"
    >
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateLbl"
        android:id="@+id/textView" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:calendarViewShown="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeLbl"
        android:id="@+id/textView1" />
    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelBtn"
            android:id="@+id/cancelBtn"
            android:layout_centerHorizontal="true"
            android:onClick="CancelReminder"
            />
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okBtn"
        android:id="@+id/okBtn"
        android:layout_centerHorizontal="true"
        android:onClick="SetReminder"
        />
        </LinearLayout>
</LinearLayout>
</ScrollView>
